odin recipes with added style

--- a/index.html
+++ b/index.html
@@ -4,15 +4,34 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes | Home</title>
+        <link rel="stylesheet" href="index.css">
     </head>
 
+
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/lasagna.html">Lasagna</a></li>
-            <li>
-                <a href="recipes/momos.html">Momos</a>
-            </li>
-        </ul>
+             
+        <div class="box1">
+            <img class="laurel1" alt="Roman Laurel" src="images/laurel.png" height="100" width="100">
+            <div class="title1">
+                <p><h1>Odin Recipes</h1></p>
+            </div>
+            <img class="laurel2" alt="Roman Laurel" src="images/laurel.png" height="100" width="100">
+        </div>
+      
+
+        <div class="box2"> 
+            <div class="title2">
+                <p>Contents</p>
+            </div>
+
+            <div class="list1">
+                <ul>
+                    <li><a href="recipes/lasagna/lasagna.html">Lasagna</a></li>
+                    <li><a href="recipes/momos/momos.html">Momos</a></li>
+                </ul>
+            </div>
+        </div>
+
+
     </body>
 </html>
