--- a/recipes/lasagna/lasagna.html
+++ b/recipes/lasagna/lasagna.html
@@ -4,11 +4,12 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes | Lasagna</title>
+        <link rel="stylesheet" href="../lasagna/lasagna.css">
     </head>
 
     <body>
         <h1>Lasagna</h1>
-        <img src="../images/Lasagna.jpg" width="750" height="500"
+        <img src="../../images/Lasagna.jpg" width="750" height="500"
         alt="lasagna finished dish">
 
         <h3>Description</h3>
