--- a/recipes/momos/momos.html
+++ b/recipes/momos/momos.html
@@ -4,22 +4,26 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes | Momos</title>
+        <link rel="stylesheet" href="../momos/momos.css">
     </head>
 
     <body>
 
 <!-- introduce the dish with an image and info -->
-        <h1>Momos</h1>
-        <img src="../images/Momo_nepal.jpg" width="720" height="500"
-        alt="momos finished dish">
+        <div>
+            <h1>Momos</h1>
+            <img class="momos" src="../../images/Momo_nepal.jpg" width="720" height="500" alt="momos finished dish">
+        </div>
 
-        <h3>Description</h3>
-        
-        <p>
-            Steamed dumplings originating from Nepal and Tibet
-            that are popular in Bhutan and India. Served with 
-            a sauce known as achar.
-        </p>
+        <div>
+            <h3>Description</h3>
+            
+            <p>
+                Steamed dumplings originating from Nepal and Tibet
+                that are popular in Bhutan and India. Served with 
+                a sauce known as achar.
+            </p>
+        </div>
 
 
 <!-- what is needed to make momos -->
